--- a/.github/workflows/daas.yml
+++ b/.github/workflows/daas.yml
@@ -87,6 +87,12 @@ jobs:
         # _EOF_
         # /home/runner/resin-3.1.16/bin/httpd.sh restart
         #tail -f /home/runner/resin-3.1.16/log/jvm-default.log
+    - name: Notify Ready
+        - uses: JasonEtco/create-an-issue@v2
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            filename: .github/issue-template.md
     - name: clean up
       run: |
         while true
