--- a/.github/workflows/daas.yml
+++ b/.github/workflows/daas.yml
@@ -57,6 +57,12 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: models
+     - name: Notify Ready
+      uses: JasonEtco/create-an-issue@v2
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        filename: ./models/.github/issue-template.md
     - name: generate code
       run: |
         ./daas-client/gencode.sh ./models/model.xml all /home/runner/work/daas-sample/daas-sample/
@@ -87,12 +93,7 @@ jobs:
         # _EOF_
         # /home/runner/resin-3.1.16/bin/httpd.sh restart
         #tail -f /home/runner/resin-3.1.16/log/jvm-default.log
-    - name: Notify Ready
-      uses: JasonEtco/create-an-issue@v2
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        filename: .github/issue-template.md
+
     - name: clean up
       run: |
         while true
