--- a/.github/workflows/daas.yml
+++ b/.github/workflows/daas.yml
@@ -42,6 +42,7 @@ jobs:
         sudo apt-get install -y gradle
     - name: set up mysql client
       run: |
+        sudo apt-get update
         sudo apt-get install -y mysql-client
     - name: set up resin
       run: |
